--- a/index.ipynb
+++ b/index.ipynb
@@ -338,7 +338,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in range(1:101)"
+    "for i in range(1:101):\n",
+    "    if "
    ]
   },
   {
