--- a/index.ipynb
+++ b/index.ipynb
@@ -339,7 +339,7 @@
    "outputs": [],
    "source": [
     "for i in range(1:101):\n",
-    "    if i is "
+    "    if i number%2==0"
    ]
   },
   {
