--- a/index.ipynb
+++ b/index.ipynb
@@ -340,7 +340,7 @@
    "source": [
     "for i in range(1:101):\n",
     "    if i%2==0:\n",
-    "        "
+    "        print(i )"
    ]
   },
   {
