--- a/index.ipynb
+++ b/index.ipynb
@@ -341,7 +341,7 @@
     "for i in range(1:101):\n",
     "    if i%2==0:\n",
     "        print(i \"is odd\")\n",
-    "    "
+    "    elif"
    ]
   },
   {
