--- a/index.ipynb
+++ b/index.ipynb
@@ -342,7 +342,7 @@
     "    if i%2==0:\n",
     "        print(i \"is odd\")\n",
     "    if i%7==0:\n",
-    "        "
+    "        print (i \"is divisib\")"
    ]
   },
   {
