automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -342,7 +342,8 @@
     "    if i%2==0:\n",
     "        print(i \"is odd\")\n",
     "    if i%7==0:\n",
-    "        print (i \"is divisib\")"
+    "        print (i \"is divisible by 14\")\n",
+    "        "
    ]
   },
   {
