--- a/index.ipynb
+++ b/index.ipynb
@@ -340,9 +340,9 @@
    "source": [
     "for i in range(1:101):\n",
     "    if i%2==0:\n",
-    "        print(i \"is odd\")\n",
+    "        print(\"i is odd\")\n",
     "    if i%7==0:\n",
-    "        print (i \"is divisible by 14\")\n",
+    "        print (i is divisible by 14\")\n",
     "    if i%5"
    ]
   },
