--- a/index.ipynb
+++ b/index.ipynb
@@ -344,7 +344,8 @@
     "    if i%7==0:\n",
     "        print (\"i is divisible by 14\")\n",
     "    if i%5==0:\n",
-    "        if i%2!="
+    "        if i%2!=0:\n",
+    "            print ()"
    ]
   },
   {
