--- a/index.ipynb
+++ b/index.ipynb
@@ -345,7 +345,8 @@
     "        print (\"i is divisible by 14\")\n",
     "    if i%5==0:\n",
     "        if i%2!=0:\n",
-    "            print (\"i high five!\")"
+    "            print (\"i high five!\")\n",
+    "    if "
    ]
   },
   {
