--- a/index.ipynb
+++ b/index.ipynb
@@ -348,7 +348,8 @@
     "            print (\"i high five!\")\n",
     "    if i>30:\n",
     "        if i<45:\n",
-    "            if i%8==0:"
+    "            if i%8==0:\n",
+    "                print(\"\")"
    ]
   },
   {
