automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -349,7 +349,7 @@
     "    if i>30:\n",
     "        if i<45:\n",
     "            if i%8==0:\n",
-    "                print(\"\")"
+    "                print(\"i happens twice\")"
    ]
   },
   {
