--- a/index.ipynb
+++ b/index.ipynb
@@ -349,8 +349,7 @@
     "    if i>30:\n",
     "        if i<45:\n",
     "            if i%8==0:\n",
-    "                print(\"i this happens twice\")\n",
-    "                "
+    "                print(\"i this happens twice\")\n"
    ]
   },
   {
