--- a/index.ipynb
+++ b/index.ipynb
@@ -334,9 +334,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-1-848a5deaf68d>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-848a5deaf68d>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    for i in range(1:101):\u001b[0m\n\u001b[0m                    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "for i in range(1:101):\n",
     "    if i%2==0:\n",
@@ -349,7 +358,7 @@
     "    if i>30:\n",
     "        if i<45:\n",
     "            if i%8==0:\n",
-    "                print(\"i this happens twice\")\n"
+    "                print(\"i this happens twice\")"
    ]
   },
   {
