--- a/index.ipynb
+++ b/index.ipynb
@@ -334,20 +334,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-1-848a5deaf68d>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-848a5deaf68d>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    for i in range(1:101):\u001b[0m\n\u001b[0m                    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "i is odd\n",
+      "i is divisible by 14\n",
+      "i is odd\n",
+      "i is odd\n",
+      "i high five!\n",
+      "i is odd\n",
+      "i is divisible by 14\n",
+      "i is odd\n",
+      "i is odd\n",
+      "i is odd\n",
+      "i is odd\n",
+      "i is divisible by 14\n",
+      "i high five!\n",
+      "i is odd\n",
+      "i is odd\n",
+      "i is odd\n",
+      "i is divisible by 14\n",
+      "i is odd\n",
+      "i is odd\n",
+      "i high five!\n",
+      "i is odd\n",
+      "i is odd\n",
+      "i is divisible by 14\n",
+      "i is odd\n",
+      "i is odd\n",
+      "i this happens twice\n",
+      "i is odd\n",
+      "i is divisible by 14\n",
+      "i high five!\n",
+      "i is odd\n",
+      "i is odd\n",
+      "i is odd\n",
+      "i this happens twice\n",
+      "i is odd\n",
+      "i is divisible by 14\n",
+      "i is odd\n",
+      "i high five!\n",
+      "i is odd\n",
+      "i is odd\n",
+      "i is divisible by 14\n",
+      "i is odd\n",
+      "i is odd\n",
+      "i is odd\n",
+      "i high five!\n",
+      "i is odd\n",
+      "i is divisible by 14\n",
+      "i is odd\n",
+      "i is odd\n",
+      "i is odd\n",
+      "i is divisible by 14\n",
+      "i is odd\n",
+      "i high five!\n",
+      "i is odd\n",
+      "i is odd\n",
+      "i is odd\n",
+      "i is divisible by 14\n",
+      "i is odd\n",
+      "i is odd\n",
+      "i high five!\n",
+      "i is odd\n",
+      "i is divisible by 14\n",
+      "i is odd\n",
+      "i is odd\n",
+      "i is odd\n",
+      "i is odd\n",
+      "i is divisible by 14\n",
+      "i high five!\n",
+      "i is odd\n",
+      "i is odd\n",
+      "i is odd\n",
+      "i is divisible by 14\n",
+      "i is odd\n",
+      "i is odd\n",
+      "i high five!\n",
+      "i is odd\n",
+      "i is odd\n",
+      "i is divisible by 14\n",
+      "i is odd\n"
      ]
     }
    ],
    "source": [
-    "for i in range(1:101):\n",
+    "for i in range(101):\n",
     "    if i%2==0:\n",
     "        print(\"i is odd\")\n",
     "    if i%7==0:\n",
@@ -358,7 +434,8 @@
     "    if i>30:\n",
     "        if i<45:\n",
     "            if i%8==0:\n",
-    "                print(\"i this happens twice\")"
+    "                print(\"i this happens twice\")\n",
+    "                "
    ]
   },
   {
