--- a/index.ipynb
+++ b/index.ipynb
@@ -334,91 +334,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "i is odd\n",
-      "i is divisible by 14\n",
-      "i is odd\n",
-      "i is odd\n",
-      "i high five!\n",
-      "i is odd\n",
-      "i is divisible by 14\n",
-      "i is odd\n",
-      "i is odd\n",
-      "i is odd\n",
-      "i is odd\n",
-      "i is divisible by 14\n",
-      "i high five!\n",
-      "i is odd\n",
-      "i is odd\n",
-      "i is odd\n",
-      "i is divisible by 14\n",
-      "i is odd\n",
-      "i is odd\n",
-      "i high five!\n",
-      "i is odd\n",
-      "i is odd\n",
-      "i is divisible by 14\n",
-      "i is odd\n",
-      "i is odd\n",
-      "i this happens twice\n",
-      "i is odd\n",
-      "i is divisible by 14\n",
-      "i high five!\n",
-      "i is odd\n",
-      "i is odd\n",
-      "i is odd\n",
-      "i this happens twice\n",
-      "i is odd\n",
-      "i is divisible by 14\n",
-      "i is odd\n",
-      "i high five!\n",
-      "i is odd\n",
-      "i is odd\n",
-      "i is divisible by 14\n",
-      "i is odd\n",
-      "i is odd\n",
-      "i is odd\n",
-      "i high five!\n",
-      "i is odd\n",
-      "i is divisible by 14\n",
-      "i is odd\n",
-      "i is odd\n",
-      "i is odd\n",
-      "i is divisible by 14\n",
-      "i is odd\n",
-      "i high five!\n",
-      "i is odd\n",
-      "i is odd\n",
-      "i is odd\n",
-      "i is divisible by 14\n",
-      "i is odd\n",
-      "i is odd\n",
-      "i high five!\n",
-      "i is odd\n",
-      "i is divisible by 14\n",
-      "i is odd\n",
-      "i is odd\n",
-      "i is odd\n",
-      "i is odd\n",
-      "i is divisible by 14\n",
-      "i high five!\n",
-      "i is odd\n",
-      "i is odd\n",
-      "i is odd\n",
-      "i is divisible by 14\n",
-      "i is odd\n",
-      "i is odd\n",
-      "i high five!\n",
-      "i is odd\n",
-      "i is odd\n",
-      "i is divisible by 14\n",
-      "i is odd\n"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-3-e8cb02e1da74>, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-3-e8cb02e1da74>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    print(i \"is odd\")\u001b[0m\n\u001b[0m                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
