--- a/index.ipynb
+++ b/index.ipynb
@@ -349,7 +349,7 @@
    "source": [
     "for i in range(101):\n",
     "    if i%2==0:\n",
-    "        print(i \"is odd\")\n",
+    "        print(\"i is odd\")\n",
     "    if i%7==0:\n",
     "        print (\"i is divisible by 14\")\n",
     "    if i%5==0:\n",
